# lambda

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
scenes/: cornell.ass
src/: intersect.cpp  lambda.h  main.cpp  math.cpp  minimal.cpp  renderer.cpp  sampler.cpp  scene.cpp  stack.cpp
